[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
scraper = "0.12.0"
tokio = { version = "0.2.25", features = ["full"] }
# tokio-stream = { version = "0.1", optional = true }
# tokio-util = { version = "0.6", optional = true, features = ["compat", "io"] }
libc = "0.2.99"